--- a/sportResultBoot/pom.xml
+++ b/sportResultBoot/pom.xml
@@ -56,8 +56,13 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
-		
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+
+
 
 	</dependencies>
 
